--- a/serverless.yml
+++ b/serverless.yml
@@ -2,30 +2,30 @@ service: mazzi-chat-com
 
 plugins:
   - serverless-dotenv-plugin
-  - serverless-prune-plugin
+  # - serverless-prune-plugin
 
 custom:
   stage: prod
   dotenv:
     path: ./.env.production
-  prune:
-    automatic: true
-    number: 20
+  # prune:
+  #   automatic: true
+  #   number: 20
 
 provider:
   name: aws
   stage: prod
   runtime: nodejs8.10
   region: us-east-1
-  memorySize: 1024
+  memorySize: 512
   timeout: 60
   versionFunctions: true
 
 functions:
   mazzi-chat-com:
     handler: dist/AppLambda.handler
-    name: mazzi-chat-com-${self:custom.stage}
+    name: mazzi-chat-com-prod
     runtime: nodejs8.10
-    memorySize: 1024
+    memorySize: 512
     timeout: 60
-    role: arn:aws:iam::834201812602:role/mazzi-chat-com-prod-us-east-1-lambdaRole
+    role: arn:aws:iam::834201812602:role/service-role/mazzi-chat-com-prod-us-east-1-lambdaRole
