--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
-    "bcrypt": "3.0.3",
     "body-parser": "^1.18.3",
     "class-validator": "^0.9.1",
     "cors": "^2.8.4",
@@ -21,6 +20,7 @@
     "lodash": "^4.17.11",
     "mailgun-js": "^0.21.0",
     "morgan": "^1.9.1",
+    "password-hash": "^1.2.2",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.7",
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/aws-serverless-express": "^3.3.0",
-    "@types/bcrypt": "^2.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
@@ -45,17 +44,20 @@
     "@types/mailgun-js": "^0.16.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^8.5.5",
+    "@types/password-hash": "^1.2.20",
     "@types/twilio": "^0.0.10",
     "nodemon": "^1.18.4",
     "serverless-dotenv-plugin": "^2.0.1",
     "serverless-prune-plugin": "^1.3.2",
     "ts-node": "^7.0.1",
+    "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.1"
   },
   "scripts": {
-    "start": "cd src && nodemon --watch 'src/**/*.ts' --exec ts-node AppLocal.ts",
+    "start": "node node_modules/tsc-watch/index.js --project ./ --outDir ./dist --onSuccess \"node dist/AppLocal.js\"",
+    "dev": "cd src && nodemon --watch 'src/**/*.ts' --exec ts-node AppLocal.ts",
     "deploy": "npx tsc && serverless deploy --aws-profile gskim"
   },
   "now": {
