--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "class-validator": "^0.9.1",
     "cors": "^2.8.4",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/aws-serverless-express": "^3.3.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
