--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-serverless-express": "^3.3.5",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
