type-graphql version up

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "gskim <kiseon1987@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "apollo-server-express": "^2.3.1",
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
     "baiji-entity": "^1.1.0-alpha.5",
@@ -17,7 +16,8 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "express-graphql": "^0.7.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.3.1",
     "graphql-tools": "3.0.4",
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
@@ -29,7 +29,7 @@
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.7",
     "twilio": "^3.17.4",
-    "type-graphql": "^0.16.0",
+    "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.9",
     "typeorm-typedi-extensions": "^0.2.1"
@@ -42,7 +42,8 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
-    "@types/express-graphql": "^0.6.2",
+    "@types/express-graphql": "^0.8.0",
+    "@types/graphql": "^14.2.0",
     "@types/helmet": "^0.0.42",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
