--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "express-graphql": "^0.8.0",
-    "graphql": "^14.3.1",
-    "graphql-tools": "3.0.4",
-    "helmet": "^3.13.0",
+    "graphql": "^14.5.6",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "mailgun-js": "^0.21.0",
@@ -29,6 +26,8 @@
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.7",
+    "socket-controllers": "^0.0.5",
+    "socket.io": "^2.2.0",
     "twilio": "^3.17.4",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
@@ -43,15 +42,14 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
-    "@types/express-graphql": "^0.8.0",
-    "@types/graphql": "^14.2.0",
-    "@types/helmet": "^0.0.42",
+    "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mailgun-js": "^0.16.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^8.5.5",
     "@types/password-hash": "^1.2.20",
+    "@types/socket.io": "^2.1.2",
     "@types/twilio": "^0.0.10",
     "nodemon": "^1.18.4",
     "serverless-dotenv-plugin": "^2.0.1",
