--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.7",
     "socket-controllers": "^0.0.5",
+    "socket.io": "^2.3.0",
     "twilio": "^3.17.4",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
@@ -48,6 +49,7 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^8.5.5",
     "@types/password-hash": "^1.2.20",
+    "@types/socket.io": "^2.1.3",
     "@types/twilio": "^0.0.10",
     "nodemon": "^1.18.4",
     "serverless-dotenv-plugin": "^2.0.1",
