--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "gskim <kiseon1987@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/mysql": "^2.15.8",
     "apollo-server-express": "^2.6.3",
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
@@ -22,8 +23,8 @@
     "lodash": "^4.17.11",
     "mailgun-js": "^0.21.0",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "password-hash": "^1.2.2",
-    "pg": "^7.4.3",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.7",
     "socket-controllers": "^0.0.5",
@@ -31,7 +32,7 @@
     "twilio": "^3.17.4",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
-    "typeorm": "^0.2.9",
+    "typeorm": "0.2.20",
     "typeorm-typedi-extensions": "^0.2.1"
   },
   "devDependencies": {
