--- a/.gitignore
+++ b/.gitignore
@@ -55,8 +55,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.production
+# .env
+# .env.production
 
 # next.js build output
 .next
