--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-server-express": "^2.6.3",
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
+    "axios": "^0.19.0",
     "baiji-entity": "^1.1.0-alpha.5",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
@@ -57,10 +58,10 @@
     "serverless-prune-plugin": "^1.3.2",
     "ts-node": "^7.0.1",
     "tsc-watch": "^1.0.31",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "3.7.2",
-    "tsconfig-paths": "^3.9.0"
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "node node_modules/tsc-watch/index.js --project ./ --outDir ./dist --onSuccess \"node dist/AppLocal.js\"",
